# optix_minimal_example

./: CMakeLists.txt  LICENSE
src/: CMakeLists.txt  main.cpp  material.cu  miss.cu  raydata.h  raygen.cu  sphere.cu
